original/tests%20231230024431/compiler_output/CompilerOutput-PrimeFib_147_1Test.java.txt
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/PrimeFib_147_1Test.java:24: error: isPrime(int) has private access in PrimeFib
        assertTrue(PrimeFib.isPrime(2));
                           ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/PrimeFib_147_1Test.java:25: error: isPrime(int) has private access in PrimeFib
        assertTrue(PrimeFib.isPrime(3));
                           ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/PrimeFib_147_1Test.java:26: error: isPrime(int) has private access in PrimeFib
        assertTrue(PrimeFib.isPrime(5));
                           ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/PrimeFib_147_1Test.java:27: error: isPrime(int) has private access in PrimeFib
        assertTrue(PrimeFib.isPrime(13));
                           ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/PrimeFib_147_1Test.java:28: error: isPrime(int) has private access in PrimeFib
        assertTrue(PrimeFib.isPrime(89));
                           ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/PrimeFib_147_1Test.java:29: error: isPrime(int) has private access in PrimeFib
        assertFalse(PrimeFib.isPrime(4));
                            ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/PrimeFib_147_1Test.java:30: error: isPrime(int) has private access in PrimeFib
        assertFalse(PrimeFib.isPrime(6));
                            ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/PrimeFib_147_1Test.java:31: error: isPrime(int) has private access in PrimeFib
        assertFalse(PrimeFib.isPrime(10));
                            ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/PrimeFib_147_1Test.java:32: error: isPrime(int) has private access in PrimeFib
        assertFalse(PrimeFib.isPrime(15));
                            ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/PrimeFib_147_1Test.java:33: error: isPrime(int) has private access in PrimeFib
        assertFalse(PrimeFib.isPrime(100));
                            ^
10 errors
